Openshift-yaml-files/ingress-service (1).yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/rewrite-target":"/$1"},"name":"ingress-service","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"client-cluster-ip-service","servicePort":3000},"path":"/?(.*)"},{"backend":{"serviceName":"server-cluster-ip-service","servicePort":5000},"path":"/api/?(.*)"}]}}]}}
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  creationTimestamp: 2019-07-19T21:23:09Z
  generation: 1
  name: ingress-service
  namespace: default
  resourceVersion: "3080"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/ingress-service
  uid: 6843588b-aa6b-11e9-8636-42010aa80026
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
        path: /?(.*)
      - backend:
          serviceName: server-cluster-ip-service
          servicePort: 5000
        path: /api/?(.*)
status:
  loadBalancer:
    ingress:
    - ip: 34.94.101.112
