Openshift-yaml-files/my-nginx-nginx-ingress-default-backend_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2019-07-19T21:13:50Z
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.10.0
    component: default-backend
    heritage: Tiller
    release: my-nginx
  name: my-nginx-nginx-ingress-default-backend
  namespace: default
  resourceVersion: "1202"
  selfLink: /api/v1/namespaces/default/services/my-nginx-nginx-ingress-default-backend
  uid: 1a9a1af2-aa6a-11e9-8636-42010aa80026
spec:
  clusterIP: 10.0.13.61
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: nginx-ingress
    component: default-backend
    release: my-nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
